# supersonicai

./: .gitignore  CMakeLists.txt  cmake_growler.sh
supersonicai/: main.cpp
supersonicai/agents/: actor_critic.cpp  actor_critic.h  agents.hpp  base.cpp  base.h  brute.cpp  brute.h  random.cpp  random.h  replay.cpp  replay.h
supersonicai/dataset/: generator.cpp  generator.h  image.cpp  image.h  segmentation_generator.cpp  segmentation_generator.h
supersonicai/dataset/parallax/: background.cpp  background.h
supersonicai/dataset/sprite/: ballhog_sprite.cpp  ballhog_sprite.h  batbrain_sprite.cpp  bomb_sprite.cpp  burrobot_sprite.cpp  burrobot_sprite.h  buzzbomber_sprite.cpp  caterkiller_sprite.cpp  crabmeat_sprite.cpp  eggman_sprite.cpp  jaws_sprite.cpp  masher_sprite.cpp  motobug_sprite.cpp  newtron_sprite.cpp  orbinaut_sprite.cpp  roller_sprite.cpp  sonic_sprite.cpp  sonic_sprite.h  spikes_sprite.cpp  splat_sprite.cpp  sprite.cpp  sprite.h
supersonicai/distributions/: categorical.cpp  categorical.h  distribution.cpp  distribution.h
supersonicai/drivers/: main.cpp  play.cpp  play.h  train.cpp  train.h
supersonicai/game/: action.cpp  action.h  action_sequence.cpp  action_sequence.h  game.cpp  game.h  info.cpp  info.h  level.cpp  level.h  levels.cpp  levels.h
supersonicai/ml/: actor_critic_trainer.cpp  actor_critic_trainer.h  brute_trainer.cpp  brute_trainer.h  cvToTensor.cpp  cvToTensor.h  frontier.cpp  frontier.h  state.cpp  state.h  trainer_base.cpp  trainer_base.h
supersonicai/networks/: actor_critic_network.cpp  actor_critic_network.h
supersonicai/notes/: highleveldesign.txt  mvc.txt  python.txt
supersonicai/python/: helpers.cpp  helpers.h  image.cpp  image.h
supersonicai/rewards/: reward_system.cpp  reward_system.h
supersonicai/util/: random.cpp  random.h  stopwatch.cpp  stopwatch.h  timer.cpp  timer.h
supersonicai/views/: base.cpp  base.h  image.cpp  image.h  none.cpp
supersonicai/vision/: draw.cpp  draw.h  helpers.cpp  helpers.h  preprocessing.cpp  preprocessing.h
